--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,54 @@
-.page{
+* {
+    padding: 0;
+    margin: 0;
 
 }
+body
+{
+    font-family: 'Lato', sans-serif;
+    background-color: #000000;
+}
 
+.page {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.intro-container{
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -250px;
+    margin-left: -250px;
+    background-color: #ffffff;
+}
+
+.intro-content {
+    width: 320px;
+    height: 320px;
+    margin: 100px auto;
+}
+
+a.block{
+    height: 20px;
+    text-align: center;
+    font-size: 16px;
+    color: #fff;
+    background-color: #000;
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-bottom: 65px;
+    padding: 20px 0;
+    font-weight: 100;
+}
+
+.logo-intro
+{
+    background: url("../img/logo-intro.png") no-repeat;
+    width: 108px;
+    height: 41px;
+    margin: 95px auto 0;
+}
