--- a/css/site.css
+++ b/css/site.css
@@ -3,18 +3,20 @@
     margin: 0;
 
 }
-body
-{
+
+body {
     font-family: 'Lato', sans-serif;
-    background-color: #000000;
+    background: #000000;
 }
 
 .page {
     width: 1200px;
     margin: 0 auto;
+    background-image:  url("../img/bg.png");
+    min-height: 900px;
 }
 
-.intro-container{
+.intro-container {
     width: 500px;
     height: 500px;
     position: absolute;
@@ -31,7 +33,7 @@ body
     margin: 100px auto;
 }
 
-a.block{
+a.block {
     height: 20px;
     text-align: center;
     font-size: 16px;
@@ -45,15 +47,14 @@ a.block{
     font-weight: 100;
 }
 
-.logo-intro
-{
+.logo-intro {
     background: url("../img/logo-intro.png") no-repeat;
     width: 108px;
     height: 41px;
     margin: 95px auto 0;
 }
 
-.imagine{
+.imagine {
     display: none;
     background: url("../img/logo-intro-big.png") no-repeat bottom center;
     width: 360px;
@@ -68,4 +69,59 @@ a.block{
     font-size: 25px;
     line-height: 45px;
     font-weight: 100;
+}
+
+.navigation-container {
+    width: 128px;
+    position: absolute;
+    margin-left: 15px;
+    font-size: 9px;
+
+}
+
+.navigation-container, .navigation-container a
+{
+    color: #ffffff;
+}
+
+.category-title {
+
+    background-color: rgba(0,0,0,0.5);
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+    margin-bottom: 22px;
+
+}
+
+.category-title span {
+    border-bottom: 1px dashed #ffffff;
+}
+
+.menu {
+
+}
+
+.menu .logo {
+    height: 80px;
+    background: #231f20 url("../img/logo-menu.png") no-repeat center;
+}
+
+.menu .logo,
+.menu .item {
+    background-color: #231f20;
+    margin-bottom: 3px;
+}
+
+.menu .item {
+    text-align: center;
+    padding: 20px 20px;
+    text-transform: uppercase;
+}
+
+.footer
+{
+    height: 110px;
+    width: 1200px;
+    margin: 0 auto;
 }
