--- a/css/site.css
+++ b/css/site.css
@@ -12,7 +12,7 @@ body {
 .page {
     width: 1200px;
     margin: 0 auto;
-    background-image:  url("../img/bg.png");
+    background-image: url("../img/bg.png");
     min-height: 900px;
 }
 
@@ -79,16 +79,14 @@ a.block {
 
 }
 
-.navigation-container, .navigation-container a
-{
+.navigation-container, .navigation-container a {
     color: #ffffff;
 }
 
 .category-title {
-
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
-    padding: 10px;
+    padding: 10px 0 14px 0;
     text-transform: uppercase;
     margin-bottom: 22px;
 
@@ -119,9 +117,58 @@ a.block {
     text-transform: uppercase;
 }
 
-.footer
-{
+.footer {
     height: 110px;
     width: 1200px;
     margin: 0 auto;
+    font-size: 12px;
+    color: #ffffff;
+    /*font-family: 'Lato Light', sans-serif;*/
+
+}
+
+.footer .copy {
+    float: left;
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+.footer .em {
+    float: right;
+    height: 25px;
+    padding-left: 50px;
+    background: url("../img/em.png") no-repeat left 3px;
+    text-align: left;
+    margin-top: 40px;
+    margin-right: 20px;
+    line-height: 14px;
+
+}
+
+.footer .em a {
+    color: #5eb3d5;
+}
+
+.language-switcher {
+    width: 92px;
+    height: 33px;
+    position: absolute;
+    border: 1px solid #e3e8ed;
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-top: 16px;
+    text-align: center;
+    padding-top: 7px;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-left: 1085px;
+}
+
+.language-switcher span {
+    border-bottom: 1px dashed #ffffff;
+    font-size: 9px;
+}
+
+.language-switcher span a {
+    color: inherit;
+    text-decoration: none;
 }
