--- a/css/site.css
+++ b/css/site.css
@@ -9,11 +9,21 @@ body {
     background: #000000;
 }
 
-.page {
+#page {
     width: 1200px;
     margin: 0 auto;
-    background-image: url("../img/bg.png");
     min-height: 900px;
+    position: relative;
+}
+
+#bg-layer
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("../img/bg.png");
 }
 
 .intro-container {
