--- a/css/site.css
+++ b/css/site.css
@@ -226,3 +226,40 @@ a.block {
     color: #ffffff;
     font-size: 13px;
 }
+
+
+#contentFrameWrapper{
+    padding: 8px;
+    width: 584px;
+    background-color: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 220px;
+    right: 0;
+}
+
+#contentFrameWrapper #contentFrame
+{
+    color: #ffffff;
+    background-color: rgba(0,0,0,0.5);
+}
+
+#contentFrameWrapper #contentFrame #contentContainer
+{
+    width: 385px;
+    padding-left: 30px;
+    padding-top: 60px;
+}
+
+#contentFrameWrapper #contentFrame #contentContainer .title
+{
+    text-transform: uppercase;
+    font-size: 22px;
+}
+
+#contentFrameWrapper #contentFrame #contentContainer .text
+{
+    font-size: 13px;
+    padding-top: 20px;
+    line-height: 22px;
+    padding-bottom: 50px;
+}
